fix: label white-space nowrap

--- a/src/label/style/index.less
+++ b/src/label/style/index.less
@@ -10,6 +10,7 @@
   font-weight: 400;
   font-size: 14px;
   border-radius: 4px;
+  white-space: nowrap;
 
   &-type-line {
     border-style: solid;
